--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : the-minimum
+  name : twitter2
 ---
 {% include JB/setup %}
-{% include themes/the-minimum/default.html %}
+{% include themes/twitter2/default.html %}
