--- a/assets/themes/twitter2/css/style.css
+++ b/assets/themes/twitter2/css/style.css
@@ -1,6 +1,7 @@
 /* Override some defaults */
 html, body {
-  background-color: #eee;
+  /* background-color: #eee; */
+  background-image: url(/assets/themes/twitter2/skin/stripe.png); background-repeat: repeat;
 }
 .navbar {
   margin-bottom: 0;
