--- a/_includes/themes/twitter2/post.html
+++ b/_includes/themes/twitter2/post.html
@@ -6,6 +6,14 @@
   <div class="span8">
     {{ content }}
     <hr>
+    <div id="related">
+      <h2>Related Posts</h2>
+        <ul class="posts">
+            {% for post in site.related_posts limit:3 %}
+            <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
     <div class="pagination">
       <ul>
       {% if page.previous %}
