fixed divs on some posts

--- a/assets/themes/twitter2/css/style.css
+++ b/assets/themes/twitter2/css/style.css
@@ -69,4 +69,9 @@ html, body {
 	border:1px solid #4C964D;
 	color:#FFF;
 }
-	
+
+/* highlight ====================================*/
+.highlight pre  {
+   color: white;
+   background: black;
+}
