--- a/assets/themes/twitter2/css/style.css
+++ b/assets/themes/twitter2/css/style.css
@@ -3,6 +3,19 @@ html, body {
   /* background-color: #eee; */
   background-image: url(/assets/themes/twitter2/skin/stripe.png); background-repeat: repeat;
 }
+/* from octopress */
+.pre-code, html .gist .gist-file .gist-syntax .gist-highlight pre, .highlight code {
+   font-family: Menlo,Monaco,"Andale Mono","lucida console","Courier New",monospace !important;
+   overflow: scroll;
+   overflow-y: hidden;
+   display: block;
+   padding: .8em !important;
+   overflow-x: auto;
+   line-height: 1.45em;
+   background: #002B36 url('/images/noise.png?1329687223') top left !important;
+   color: #93A1A1 !important;
+}
+
 .navbar {
   margin-bottom: 0;
 }
