adjusted font code blocks

--- a/assets/themes/twitter2/css/style.css
+++ b/assets/themes/twitter2/css/style.css
@@ -85,6 +85,6 @@ html, body {
 
 /* highlight ====================================*/
 .highlight pre  {
-   color: white;
-   background: black;
+   xxx0color: white;
+   xxx0background: black;
 }
