adjusted font code blocks

--- a/assets/themes/twitter2/css/style.css
+++ b/assets/themes/twitter2/css/style.css
@@ -86,5 +86,5 @@ html, body {
 /* highlight ====================================*/
 .highlight pre  {
    xxx0color: white;
-   xxx0background: black;
+   background:  #002B36;
 }
