--- a/_includes/themes/twitter2/default.html
+++ b/_includes/themes/twitter2/default.html
@@ -14,7 +14,7 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ ASSET_PATH }}/css/manni.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/css/perldoc.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!--<link href="{{ ASSET_PATH }}/css/highlight.css?body=1" rel="stylesheet" type="text/css" media="all"> -->
 
