updated the css to use perldoc.css

--- a/assets/themes/twitter2/css/perldoc.css
+++ b/assets/themes/twitter2/css/perldoc.css
@@ -1,4 +1,4 @@
-.highlight { background-color: #ffffcc ; color: black;}
+.highlight { background-color: #EED; color: black;}
 .highlight .hll { background-color: #ffffcc }
 .highlight .c { color: #228B22 } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
